--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,18 @@
 {
-  "name": "My First PWA",
-  "short_name": "MyPWA",
+  "name": "Sound & TTS Player",
+  "short_name": "SoundTTS",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#2196f3",
-  "description": "A simple sample PWA.",
+  "background_color": "#2575fc",
+  "theme_color": "#6a11cb",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
